--- a/app/src/main/res/layout/item_quote_view.xml
+++ b/app/src/main/res/layout/item_quote_view.xml
@@ -6,52 +6,67 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/ivAuthorImage"
-        android:layout_width="160dp"
-        android:layout_height="90dp"
-        android:scaleType="centerCrop"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cvSingleQuoteItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/blue"
+        app:strokeWidth="1dp">
 
-    <TextView
-        android:id="@+id/tvSentence"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:maxLines="6"
-        android:text="''Sentence''"
-        android:textColor="@android:color/black"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/ivAuthorImage"
-        app:layout_constraintStart_toStartOf="@+id/ivAuthorImage"
-        app:layout_constraintTop_toBottomOf="@+id/ivAuthorImage" />
+        <LinearLayout
+            android:id="@+id/llQuoteField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tvAuthor"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:maxLines="1"
-        android:text="~Author~"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="@+id/tvSentence"
-        app:layout_constraintStart_toStartOf="@+id/tvSentence"
-        app:layout_constraintTop_toBottomOf="@+id/tvSentence" />
+            <ImageView
+                android:id="@+id/ivAuthorImage"
+                android:layout_width="160dp"
+                android:layout_height="140dp"
+                android:contentDescription="@string/contains_picture_of_stoic"
+                android:src="@drawable/stoic_marcus_aurelius_image" />
 
-    <TextView
-        android:id="@+id/tvSource"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Source"
-        android:textStyle="italic"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="@+id/tvAuthor"
-        app:layout_constraintStart_toStartOf="@+id/tvAuthor"
-        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />
+            <TextView
+                android:id="@+id/tvSentence"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="6"
+                android:padding="4dp"
+                android:text="@string/sentence"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvAuthor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:text="@string/author"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/tvSource"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="8dp"
+                android:text="@string/source"
+                android:textColor="@android:color/black"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
