--- a/app/src/main/res/layout/fragment_random_quote.xml
+++ b/app/src/main/res/layout/fragment_random_quote.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="8dp">
 
     <com.google.android.material.card.MaterialCardView
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:orientation="vertical"
+        app:cardBackgroundColor="@color/creme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,10 +28,11 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivAuthorImage"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
+                android:scaleType="centerCrop"
                 android:contentDescription="@string/contains_picture_of_stoic"
                 android:src="@drawable/stoic_marcus_aurelius_image" />
 
