--- a/app/src/main/res/layout/fragment_single_quote.xml
+++ b/app/src/main/res/layout/fragment_single_quote.xml
@@ -4,32 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="@dimen/main_layout_padding">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cvSingleQuote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:orientation="vertical"
-        app:cardBackgroundColor="@color/creme"
+        app:cardBackgroundColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/blue"
-        app:strokeWidth="1dp">
+        app:strokeWidth="@dimen/card_view_stroke_width">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/linear_layout_padding_in_card_view">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivAuthorImage"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="@dimen/circle_view_image_width"
+                android:layout_height="@dimen/circle_view_image_height"
                 android:contentDescription="@string/contains_picture_of_stoic"
                 android:src="@drawable/stoic_marcus_aurelius_image"
                 app:cardBackgroundColor="@color/creme" />
@@ -40,10 +39,10 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:gravity="center"
-                android:padding="4dp"
+                android:padding="@dimen/sentence_padding"
                 android:text="@string/sentence"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/sentence_text_size"
                 android:textStyle="bold" />
 
             <TextView
@@ -52,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:maxLines="1"
-                android:padding="8dp"
+                android:padding="@dimen/author_padding"
                 android:text="@string/author"
                 android:textColor="@android:color/black" />
 
@@ -61,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingBottom="8dp"
+                android:padding="@dimen/source_padding"
                 android:text="@string/source"
                 android:textColor="@android:color/black"
                 android:textStyle="italic" />
@@ -74,8 +73,10 @@
         android:id="@+id/fabAddToFavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:contentDescription="@string/add_to_favorite_button"
         android:src="@drawable/ic_favorite"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
