--- a/app/src/main/res/layout/item_quote_view.xml
+++ b/app/src/main/res/layout/item_quote_view.xml
@@ -4,20 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="@dimen/main_layout_padding">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cvSingleQuoteItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:orientation="vertical"
-        app:cardBackgroundColor="@color/creme"
+        app:cardBackgroundColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/blue"
-        app:strokeWidth="1dp">
+        app:strokeWidth="@dimen/card_view_stroke_width">
 
         <LinearLayout
             android:id="@+id/llQuoteField"
@@ -25,12 +24,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="@dimen/linear_layout_padding_in_card_view">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/ivAuthorImage"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="@dimen/circle_view_image_width"
+                android:layout_height="@dimen/circle_view_image_height"
                 android:contentDescription="@string/contains_picture_of_stoic"
                 android:scaleType="centerCrop"
                 android:src="@drawable/stoic_marcus_aurelius_image" />
@@ -42,10 +41,10 @@
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="6"
-                android:padding="4dp"
+                android:padding="@dimen/sentence_padding"
                 android:text="@string/sentence"
                 android:textColor="@android:color/black"
-                android:textSize="15sp"
+                android:textSize="@dimen/sentence_text_size"
                 android:textStyle="bold" />
 
             <TextView
@@ -54,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:maxLines="1"
-                android:padding="8dp"
+                android:padding="@dimen/author_padding"
                 android:text="@string/author"
                 android:textColor="@android:color/black" />
 
@@ -63,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingBottom="8dp"
+                android:paddingBottom="@dimen/source_padding"
                 android:text="@string/source"
                 android:textColor="@android:color/black"
                 android:textStyle="italic" />
