--- a/app/src/main/res/layout/fragment_random_quote.xml
+++ b/app/src/main/res/layout/fragment_random_quote.xml
@@ -10,9 +10,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cvRandomQuote"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
         android:orientation="vertical"
         app:cardBackgroundColor="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,47 +32,60 @@
                 android:id="@+id/ivAuthorImage"
                 android:layout_width="@dimen/circle_view_image_width"
                 android:layout_height="@dimen/circle_view_image_height"
+                android:layout_margin="@dimen/circle_view_image_margin_top"
                 android:contentDescription="@string/contains_picture_of_stoic"
                 android:scaleType="centerCrop"
                 android:src="@drawable/stoic_marcus_aurelius_image" />
 
-            <TextView
-                android:id="@+id/tvSentence"
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:padding="@dimen/sentence_padding"
-                android:text="@string/sentence"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/sentence_text_size"
-                android:textStyle="bold" />
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/tvAuthor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:maxLines="1"
-                android:padding="@dimen/author_padding"
-                android:text="@string/author"
-                android:textColor="@android:color/black" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvSource"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/source_padding"
-                android:text="@string/source"
-                android:textColor="@android:color/black"
-                android:textStyle="italic" />
+                    <TextView
+                        android:id="@+id/tvSentence"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="@dimen/sentence_padding"
+                        android:text="@string/sentence"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/sentence_text_size"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvAuthor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:padding="@dimen/author_padding"
+                        android:text="@string/author"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/tvSource"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="@dimen/source_padding"
+                        android:text="@string/source"
+                        android:textColor="@android:color/black"
+                        android:textStyle="italic" />
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/floating_action_button_margin"
