--- a/app/src/main/res/layout/fragment_favorite_quotes.xml
+++ b/app/src/main/res/layout/fragment_favorite_quotes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -7,6 +9,23 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSavedQuote"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_quote_view"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_no_quotes_in_favorites_yet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/no_quote_has_been_added_to_favorites_yet"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/no_quote_has_been_added_to_favorites_yet"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
