--- a/app/src/main/res/layout/fragment_favorite_quotes.xml
+++ b/app/src/main/res/layout/fragment_favorite_quotes.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/no_quote_has_been_added_to_favorites_yet"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
