Change some names, variables, correct typos, etc. - nothing to check here

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/stoic_breath" />
 
     <item
-        android:id="@+id/savedQuoteFragment"
+        android:id="@+id/favoritesQuoteFragment"
         android:icon="@drawable/ic_favorite"
         android:title="@string/favorites" />
 
