--- a/app/src/main/res/layout/fragment_random_quote.xml
+++ b/app/src/main/res/layout/fragment_random_quote.xml
@@ -11,10 +11,10 @@
         android:id="@+id/cvRandomQuote"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="@dimen/card_view_to_buttons_distance"
         android:orientation="vertical"
         app:cardBackgroundColor="@color/grey"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintBottom_toTopOf="@+id/buttonsField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -85,7 +85,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/buttonsField"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/floating_action_button_margin"
