--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="card_view_stroke_width">1dp</dimen>
     <dimen name="floating_action_button_margin">32dp</dimen>
     <dimen name="circle_view_image_margin_top">16dp</dimen>
+    <dimen name="card_view_to_buttons_distance">32dp</dimen>
 </resources>
