--- a/app/src/main/res/layout/fragment_favorite_quotes.xml
+++ b/app/src/main/res/layout/fragment_favorite_quotes.xml
@@ -14,6 +14,8 @@
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         tools:listitem="@layout/item_quote_view"/>
 
     <TextView
