--- a/app/src/main/res/layout/fragment_quotes_list.xml
+++ b/app/src/main/res/layout/fragment_quotes_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/rvQuoteList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
