--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -43,10 +43,17 @@
     <fragment
         android:id="@+id/privacyPolicyFragment"
         android:name="pl.glownia.maciej.stoicbreath.ui.fragments.PrivacyPolicyFragment"
-        android:label="Privacy Policy" /><action android:id="@+id/action_global_privacyPolicyFragment" app:destination="@id/privacyPolicyFragment"/>
+        android:label="Privacy Policy" />
+    <action
+        android:id="@+id/action_global_privacyPolicyFragment"
+        app:destination="@id/privacyPolicyFragment" />
     <fragment
         android:id="@+id/aboutFragment"
         android:name="pl.glownia.maciej.stoicbreath.ui.fragments.AboutFragment"
-        android:label="fragment_about"
-        tools:layout="@layout/fragment_about" />
+        android:label="About"
+        tools:layout="@layout/fragment_about" >
+        <action
+            android:id="@+id/action_aboutFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+    </fragment>
 </navigation>
