--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="circle_view_image_height">140dp</dimen>
     <dimen name="linear_layout_padding_in_card_view">16dp</dimen>
     <dimen name="main_layout_padding">16dp</dimen>
+    <dimen name="main_layout_padding_top">4dp</dimen>
     <dimen name="card_view_stroke_width">1dp</dimen>
     <dimen name="floating_action_button_margin">32dp</dimen>
     <dimen name="circle_view_image_margin_top">16dp</dimen>
